[gd_scene load_steps=14 format=3 uid="uid://bloethnkcb15e"]

[ext_resource type="Script" path="res://ranged_skeleton.gd" id="1_qsjdr"]
[ext_resource type="Texture2D" uid="uid://de7tsl10almeu" path="res://art/SkeletonBowAttack1.png" id="2_m4jfd"]
[ext_resource type="Texture2D" uid="uid://hcah330j5qjk" path="res://art/SkeletonBowAttack2.png" id="3_62vpk"]
[ext_resource type="Texture2D" uid="uid://deeeop00s5a28" path="res://art/SkeletonBowAttack3.png" id="4_ob85h"]
[ext_resource type="Texture2D" uid="uid://cl5jo3fpk0dsn" path="res://art/SkeletonBowAttack4.png" id="5_hnv0s"]
[ext_resource type="Texture2D" uid="uid://dlus4rgfkegxu" path="res://art/SkeletonBowAttack5.png" id="6_5ppv0"]
[ext_resource type="Texture2D" uid="uid://s2fvbqk38hb" path="res://art/SkeletonBowIdle1.png" id="7_myn55"]
[ext_resource type="Texture2D" uid="uid://b2ka30etbeteq" path="res://art/SkeletonBowIdle2.png" id="8_6od7c"]
[ext_resource type="Texture2D" uid="uid://cbnwsajjxei4x" path="res://art/SkeletonBowWalk2.png" id="9_2m3xf"]
[ext_resource type="Texture2D" uid="uid://blcpu3wuy1cw2" path="res://art/SkeletonBowWalk3.png" id="10_mtwu4"]
[ext_resource type="Texture2D" uid="uid://t1jvbuavjdep" path="res://art/SkeletonBowWalk4.png" id="11_wocgu"]
[ext_resource type="Texture2D" uid="uid://11bohtbbi66d" path="res://art/SkeletonBowWalk5.png" id="12_igmd1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bop5i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_m4jfd")
}, {
"duration": 1.0,
"texture": ExtResource("3_62vpk")
}, {
"duration": 1.0,
"texture": ExtResource("4_ob85h")
}, {
"duration": 1.0,
"texture": ExtResource("5_hnv0s")
}, {
"duration": 1.0,
"texture": ExtResource("6_5ppv0")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_myn55")
}, {
"duration": 1.0,
"texture": ExtResource("8_6od7c")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_2m3xf")
}, {
"duration": 1.0,
"texture": ExtResource("10_mtwu4")
}, {
"duration": 1.0,
"texture": ExtResource("11_wocgu")
}, {
"duration": 1.0,
"texture": ExtResource("12_igmd1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="RangedSkeleton" type="Area2D"]
script = ExtResource("1_qsjdr")

[node name="BodySpriteAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bop5i")
animation = &"walk"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-6, -14, 11, -14, 11, 11, -6, 11)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 15.0
debug_enabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
